; ModuleID = '/home/carl/AnghaBench/jerryscript/jerry-core/lit/extr_lit-char-helpers.c_lit_char_hex_to_int.c'
source_filename = "/home/carl/AnghaBench/jerryscript/jerry-core/lit/extr_lit-char-helpers.c_lit_char_hex_to_int.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LIT_CHAR_ASCII_DIGITS_BEGIN = common dso_local global i64 0, align 8
@LIT_CHAR_ASCII_DIGITS_END = common dso_local global i64 0, align 8
@LIT_CHAR_ASCII_LOWERCASE_LETTERS_HEX_BEGIN = common dso_local global i64 0, align 8
@LIT_CHAR_ASCII_LOWERCASE_LETTERS_HEX_END = common dso_local global i64 0, align 8
@LIT_CHAR_ASCII_UPPERCASE_LETTERS_HEX_BEGIN = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @lit_char_hex_to_int(i64 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %4 = load i64, i64* %3, align 8
  %5 = call i32 @lit_char_is_hex_digit(i64 %4)
  %6 = call i32 @JERRY_ASSERT(i32 %5)
  %7 = load i64, i64* %3, align 8
  %8 = load i64, i64* @LIT_CHAR_ASCII_DIGITS_BEGIN, align 8
  %9 = icmp sge i64 %7, %8
  br i1 %9, label %10, label %19

10:                                               ; preds = %1
  %11 = load i64, i64* %3, align 8
  %12 = load i64, i64* @LIT_CHAR_ASCII_DIGITS_END, align 8
  %13 = icmp sle i64 %11, %12
  br i1 %13, label %14, label %19

14:                                               ; preds = %10
  %15 = load i64, i64* %3, align 8
  %16 = load i64, i64* @LIT_CHAR_ASCII_DIGITS_BEGIN, align 8
  %17 = sub nsw i64 %15, %16
  %18 = trunc i64 %17 to i32
  store i32 %18, i32* %2, align 4
  br label %39

19:                                               ; preds = %10, %1
  %20 = load i64, i64* %3, align 8
  %21 = load i64, i64* @LIT_CHAR_ASCII_LOWERCASE_LETTERS_HEX_BEGIN, align 8
  %22 = icmp sge i64 %20, %21
  br i1 %22, label %23, label %33

23:                                               ; preds = %19
  %24 = load i64, i64* %3, align 8
  %25 = load i64, i64* @LIT_CHAR_ASCII_LOWERCASE_LETTERS_HEX_END, align 8
  %26 = icmp sle i64 %24, %25
  br i1 %26, label %27, label %33

27:                                               ; preds = %23
  %28 = load i64, i64* %3, align 8
  %29 = load i64, i64* @LIT_CHAR_ASCII_LOWERCASE_LETTERS_HEX_BEGIN, align 8
  %30 = sub nsw i64 %28, %29
  %31 = add nsw i64 %30, 10
  %32 = trunc i64 %31 to i32
  store i32 %32, i32* %2, align 4
  br label %39

33:                                               ; preds = %23, %19
  %34 = load i64, i64* %3, align 8
  %35 = load i64, i64* @LIT_CHAR_ASCII_UPPERCASE_LETTERS_HEX_BEGIN, align 8
  %36 = sub nsw i64 %34, %35
  %37 = add nsw i64 %36, 10
  %38 = trunc i64 %37 to i32
  store i32 %38, i32* %2, align 4
  br label %39

39:                                               ; preds = %33, %27, %14
  %40 = load i32, i32* %2, align 4
  ret i32 %40
}

declare dso_local i32 @JERRY_ASSERT(i32) #1

declare dso_local i32 @lit_char_is_hex_digit(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
